Improved wasm support
This commit adds a feature `no-free` and a patch that makes QuickJS' `__JS_FreeValueRT` be a noop. 

This is useful in certain short-lived Wasm programs, where freeing values in the runtime itself is not a concern and it can be assumed that the Wasm runtime will clean up any memory by recycling the Instance's memory at the end of the execution.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -114,6 +114,7 @@ dump-shapes = ["rquickjs-core/dump-shapes"]
 dump-module-resolve = ["rquickjs-core/dump-module-resolve"]
 dump-promise = ["rquickjs-core/dump-promise"]
 dump-read-object = ["rquickjs-core/dump-read-object"]
+no-free = ["rquickjs-core/no-free"]
 
 # Enable compilation tests
 compile-tests = ["rquickjs-core/compile-tests"]
